==> Dobpo/PWM_Set_STM32/Src/enc28j60.c <==
#include "stm32f7xx_hal.h"
#include "enc28j60.h"
#include "string.h"
#define FLASH_IP_SIZE 		4
#define FLASH_MAC_SIZE 		6
#define TCP_BUFFER_SIZE 			1500
#define enableChip 				GPIOB->BSRR = GPIO_PIN_6 << 16;
#define disableChip 			GPIOB->BSRR = GPIO_PIN_6;

void enc28j60ReadBuffer (uint16_t len, uint8_t* data) {
	enableChip;
	enc28j60SendByte(ENC28J60_READ_BUF_MEM);
	HAL_SPI_TransmitReceive_DMA(&hspi1, tmp_buffer, data, len);
	while (HAL_SPI_GetState(&hspi1) != HAL_SPI_STATE_READY){};
	disableChip;
}

void enc28j60WriteBuffer (uint16_t len, uint8_t* data) {
	enableChip;
	enc28j60SendByte(ENC28J60_WRITE_BUF_MEM);
	HAL_SPI_TransmitReceive_DMA(&hspi1, data, tmp_buffer, len);
	while (HAL_SPI_GetState(&hspi1) != HAL_SPI_STATE_READY){};
	disableChip;
}

uint8_t enc28j60ReadOp (uint8_t op, uint8_t address) {
	uint8_t temp;
	enableChip;
	enc28j60SendByte(op | (address & ADDR_MASK));
	temp = enc28j60SendByte(0xFF);
	if (address & 0x80) temp = enc28j60SendByte(0xFF);
	disableChip;
	return temp;
}

void enc28j60WriteOp (uint8_t op, uint8_t address, uint8_t data) {
	enableChip;
	enc28j60SendByte(op | (address & ADDR_MASK));
	enc28j60SendByte(data);
	disableChip;
}

uint16_t enc28j60PacketReceive (uint16_t maxlen, uint8_t* packet) {
	uint16_t rxstat, len;
	if(enc28j60Read(EPKTCNT) == 0) return(0);
	enc28j60WriteWord(ERDPTL, gNextPacketPtr);
	gNextPacketPtr = enc28j60ReadBufferWord();
	len = enc28j60ReadBufferWord() - 4;
	rxstat = enc28j60ReadBufferWord();
	if (len > maxlen - 1) len = maxlen - 1;
	if ((rxstat & 0x80) == 0) len = 0; else enc28j60ReadBuffer(len, packet);
	enc28j60WriteWord(ERXRDPTL, gNextPacketPtr );
	if ((gNextPacketPtr - 1 < RXSTART_INIT) || (gNextPacketPtr - 1 > RXSTOP_INIT)) enc28j60WriteWord(ERXRDPTL, RXSTOP_INIT); 
	else enc28j60WriteWord(ERXRDPTL, (gNextPacketPtr - 1));
	enc28j60WriteOp(ENC28J60_BIT_FIELD_SET, ECON2, ECON2_PKTDEC);
	return(len);
}
