==> CyberSonny/ethradio/enc28j60.c <==
#include "nike_e.h"
#include "compiler.h"
#include "enc28j60.h"
#include "io.h"

u8 enc28j60ReadOp(u8 op, u8 address)
{
	u8 data;
        
    	//sbi(SPSR, SPI2X);
	// assert CS
	ENC28J60_CONTROL_PORT &= ~(1<<ENC28J60_CONTROL_CS);
	
	// issue read command
	SPDR = op | (address & ADDR_MASK);
	while(!(SPSR & (1<<SPIF)));
	// read data
	SPDR = 0x00;
	while(!(SPSR & (1<<SPIF)));
	// do dummy read if needed
	if(address & 0x80)
	{
		SPDR = 0x00;
		while(!(SPSR & (1<<SPIF)));
	}
	data = SPDR;
	
	// release CS
	ENC28J60_CONTROL_PORT |= (1<<ENC28J60_CONTROL_CS);
        //cbi(SPSR, SPI2X);
	return data;
}

void enc28j60WriteOp(u8 op, u8 address, u8 data)
{
      //  sbi(SPSR, SPI2X);
	// assert CS
	ENC28J60_CONTROL_PORT &= ~(1<<ENC28J60_CONTROL_CS);

	// issue write command
	SPDR = op | (address & ADDR_MASK);
	while(!(SPSR & (1<<SPIF)));
	// write data
	SPDR = data;
	while(!(SPSR & (1<<SPIF)));

	// release CS
	ENC28J60_CONTROL_PORT |= (1<<ENC28J60_CONTROL_CS);
       // cbi(SPSR, SPI2X);
}

void enc28j60ReadBuffer(u16 len, u8* data)
{
         //if ((len==0)||(len>=255)) return;
	// assert CS
       // sbi(SPSR, SPI2X);
	ENC28J60_CONTROL_PORT &= ~(1<<ENC28J60_CONTROL_CS);
	
	// issue read command
	SPDR = ENC28J60_READ_BUF_MEM;
	while(!(SPSR & (1<<SPIF)));
	while(len--)
	{
		// read data
		SPDR = 0x00;
		while(!(SPSR & (1<<SPIF)));
		*data++ = SPDR;
	}	
	// release CS
	ENC28J60_CONTROL_PORT |= (1<<ENC28J60_CONTROL_CS);
      //  cbi(SPSR, SPI2X);
}

void enc28j60WriteBuffer(u16 len, u8* data)
{
       // if ((len==0)||(len>=255)) return;
	// assert CS
       // sbi(SPSR, SPI2X);
	ENC28J60_CONTROL_PORT &= ~(1<<ENC28J60_CONTROL_CS);
	
	// issue write command
	SPDR = ENC28J60_WRITE_BUF_MEM;
	while(!(SPSR & (1<<SPIF)));
	while(len--)
	{
		// write data
		SPDR = *data++;
		while(!(SPSR & (1<<SPIF)));
	}	
	// release CS
	ENC28J60_CONTROL_PORT |= (1<<ENC28J60_CONTROL_CS);
      //  cbi(SPSR, SPI2X);
}

u16 enc28j60PacketReceive(u16 maxlen, u8* packet)
 {
   u16 rxstat;
   u16 len;
//Вынесли в главный цикл   
/*   if( enc28j60Read(EPKTCNT)==0 )
   {
        return(0);
   }
*/
   if( (enc28j60Read(EIR) & EIR_RXERIF) ) // RX buffer overflow is detected!
   {
    #ifdef CONSOLE_DEBUG
     _print_fstr("EncOVF!\r\n");
    #endif
    sbi (PORTD, PD3);
    enc28j60SetBank(EFLOCON);
     enc28j60WriteOp(ENC28J60_BIT_FIELD_SET, EFLOCON, 1);// enable flow control
     enc28j60WriteOp(ENC28J60_BIT_FIELD_CLR, EIR, EIR_RXERIF);     
   }
   else
   {
     enc28j60SetBank(EFLOCON);
     enc28j60WriteOp(ENC28J60_BIT_FIELD_CLR, EFLOCON, 1);// disable flow control
     cbi (PORTD, PD3);
   };   
   
  // Set the read pointer to the start of the received packet
  enc28j60Write(ERDPTL, (NextPacketPtr));
  enc28j60Write(ERDPTH, (NextPacketPtr)>>8);
  
  // read the "next packet pointer"
  NextPacketPtr  = enc28j60ReadOp(ENC28J60_READ_BUF_MEM, 0);
  NextPacketPtr |= enc28j60ReadOp(ENC28J60_READ_BUF_MEM, 0)<<8;
  // read the packet length (see datasheet page 43)
  len  = enc28j60ReadOp(ENC28J60_READ_BUF_MEM, 0);
  len |= enc28j60ReadOp(ENC28J60_READ_BUF_MEM, 0)<<8;
  len-=4; //remove the CRC count
   // read the receive status (see datasheet page 43)
  rxstat  = enc28j60ReadOp(ENC28J60_READ_BUF_MEM, 0);
  rxstat |= ((u16)enc28j60ReadOp(ENC28J60_READ_BUF_MEM, 0))<<8;
  // limit retrieve length
   if (len>maxlen){
       len=maxlen;
      }
   // check CRC and symbol errors (see datasheet page 44, table 7-3):
   // The ERXFCON.CRCEN is set by default. Normally we should not
   // need to check this.
   if ((rxstat & 0x80)==0)
   {
      // invalid reception
      len=0;
    }
   else
   {
        // copy the packet from the receive buffer
         enc28j60ReadBuffer(len, packet);
   }
     
// Move the RX read pointer to the start of the next received packet
// This frees the memory we just read out
// Errata workaround #13. Make sure ERXRDPT is odd
//
  {
        unsigned int rstart,rend;
        rstart = (enc28j60Read(ERXSTH)<<8);
        rstart |= enc28j60Read(ERXSTL);        
        rend = (enc28j60Read(ERXNDH)<<8);
        rend |= enc28j60Read(ERXNDL);
        if (((NextPacketPtr - 1) < rstart) || ((NextPacketPtr - 1) > rend))
        {
            enc28j60Write(ERXRDPTL, (rend));
            enc28j60Write(ERXRDPTH, (rend)>>8);
        }
        else
        {
            enc28j60Write(ERXRDPTL, (NextPacketPtr-1));
            enc28j60Write(ERXRDPTH, (NextPacketPtr-1)>>8);
        }
    }
      
  // decrement the packet counter indicate we are done with this packet
  enc28j60WriteOp(ENC28J60_BIT_FIELD_SET, ECON2, ECON2_PKTDEC);
  return(len);
 }
